# persona-link

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  Roadmap.md  architecture.excalidraw  index.html  mkdocs.yml  pyproject.toml
Server/models/: index.html
Server/routes/: index.html
docs/: 404.html  index.html  objects.inv
docs/Server/getting_started/: index.html
docs/Server/models/: index.html
docs/Server/routes/: index.html
docs/persona-link-widgets/: index.html
docs/persona-link-widgets/getting_started/: index.html
docs/search/: search_index.json
docs_src/: index.md
example-web-app/persona-app-1/: package-lock.json  package.json
example-web-app/persona-app-1/src/: App.css  App.js
migrations/models/: 0_20240524151428_init.py  0_20240524153842_init.py  0_20240528170008_init.py
persona-link-widgets/: index.html
persona-link-widgets/getting_started/: index.html
persona_link/: README.md  __init__.py  api_client.py  mkdocs.yml
persona_link/avatar/: __init__.py  models.py  utils.py
persona_link/cache/: __init__.py  cache.py  hashing.py  models.py
persona_link/cache/db/: __init__.py  base_db.py  models.py  relational.py
persona_link/cache/storage/: __init__.py  azure_storage.py  base_storage.py  local_storage.py
persona_link/caching/: cache.py  models.py
persona_link/caching/db/: __init__.py  base_db.py  relational.py
persona_link/caching/storages/: __init__.py  azure_storage.py  base_storage.py  local_storage.py
persona_link/docs/: 0_getting_started.md  avatar.md  cache.md  conf.py  database.md  getting_started.md  persona_link.avatar.rst  persona_link.persona_provider.heygen.rst  persona_link.persona_provider.rst  persona_link.rst  persona_provider.md  storage.md  utilities.md
persona_link/persona_provider/: __init__.py  base.py  models.py
persona_link/persona_provider/audio/: __init__.py  audio_avatar.py
persona_link/persona_provider/azure/: __init__.py  azure_avatar.py  models.py
persona_link/persona_provider/heygen/: __init__.py  heygen_avatar.py  models.py
persona_link/persona_provider/sprite/: __init__.py  models.py  sprite_avatar.py
persona_link/personalization/: base.py  models.py  random_personalization.py
persona_link/tts/: __init__.py  base.py  factory.py
persona_link/tts/azure/: azure_tts.py  models.py
python_pkg/: README.md  setup.py
python_pkg/avatar/: api_client.py
python_pkg/avatar/caching/: cache.py  models.py
python_pkg/avatar/persona_provider/: audio_avatar.py  base.py  models.py  (+1 more)
react_library/: README.md
server/: README.md  app.py  example.py  mkdocs.yml  models.py  pyproject.toml  settings.py  utils.py  ws.py
server/docs/: getting_started.md  models.md  routes.md
server/persona_link/: app.py
tests/: cache_test.py  conftest.py  test_cache.py  test_providers.py
widgets/: README.md  mkdocs.yml  package.json  webpack.config.js
widgets/docs/: getting_started.md  index.md
widgets/src/: avatar-widget.js  index.js
(+70 files in other folders)
