[tool.poetry]
name = "persona-link"
version = "0.1.0"
description = "A comprehensive toolkit for easy integration of avatars or digital humans from any providers onto any AI base."
authors = ["Abhinav Dayal <abhinav@enligence.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
uvicorn = "^0.29.0"
aerich = "^0.7.2"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.group.core.dependencies]
python-dotenv = "^1.0.1"
pydantic = "^2.7.0"
aiohttp = "^3.9.5"

[tool.poetry.group.server.dependencies]
fastapi = "^0.110.2"

[tool.poetry.group.azure.dependencies]
azure-storage-blob = { version = "^12.19.1" }
azure-cognitiveservices-speech = { version = "^1.37.0"}

[tool.poetry.group.postgres.dependencies]
tortoise-orm = { version = "^0.20.0" }
asyncpg = { version = "^0.29.0" }
aerich = "^0.7.2"

[tool.poetry.group.sqlite.dependencies]
tortoise-orm = { version = "^0.20.0" }
aerich = "^0.7.2"

[tool.poetry.group.local-storage.dependencies]
aiofiles = { version = "^0.6.0" }

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.359"
pre-commit = "^3.7.0"
isort = "^5.13.2"
autoflake = "^2.3.1"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.6"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.3"
mkdocs-monorepo-plugin = "^1.1.0"
mkdocs-material = "^9.5.24"

[tool.aerich]
tortoise_orm = "server.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
